# liblisa

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
arch/ghidra-x64/liblisa-ghidra-x64-observer/: Cargo.toml  build.rs
arch/ghidra-x64/liblisa-ghidra-x64-observer/src/: ghidra.rs  lib.rs
arch/x64/build-vmimage/vmimage-x86-64/: Cargo.toml
arch/x64/build-vmimage/vmimage-x86-64/src/: interrupts.rs  memory.rs  userspace.rs
cli/liblisa-ghidra-x64/: Cargo.toml
cli/liblisa-ghidra-x64/src/: main.rs
cli/liblisa-libcli/: Cargo.toml
cli/liblisa-libcli/src/: detect_changes.rs  enumerate.rs  infer_dataflows.rs  synthesize.rs
liblisa/: Cargo.toml
liblisa-enc/: Cargo.toml
liblisa-enc/src/: cache.rs  encoding.rs  lib.rs  validity.rs
liblisa-enc/src/accesses/: mod.rs
liblisa-enc/src/changes/: imm.rs
liblisa-enc/src/cleanup/: dontcare.rs  generalizations.rs
liblisa-enc/src/dataflow/: analyzer.rs  fuzz.rs
liblisa-synth/: Cargo.toml
liblisa-synth/src/: generate.rs  lib.rs  synthesis_loop.rs  write_order.rs
liblisa-synth/src/cond/: caselist.rs  synthesizer.rs
liblisa/src/arch/x64/: mod.rs
liblisa/src/oracle/: iter.rs  mod.rs
liblisa/src/state/: memory.rs  mod.rs
