[workspace]
resolver = "2"
members = [
    # Main libraries
    "liblisa",
    "liblisa-enc",
    "liblisa-synth",

    # Architecture-specific
    "arch/x64/liblisa-x64-observer",
    "arch/x64/liblisa-x64-observer-shmqueue",
    "arch/ghidra-x64/liblisa-ghidra-x64-observer",

    # CLI tools
    "cli/liblisa-x64",
    "cli/liblisa-ghidra-x64",
    "cli/liblisa-libcli",
    "cli/liblisa-semantics-tool", "arch/x64/build-vmimage",
]

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
debug = true
codegen-units = 1
opt-level = 3

[profile.test]
opt-level = 2

[profile.dev.package.liblisa-x64-observer]
opt-level = 3

[profile.dev.package.liblisa-ghidra-x64-observer]
opt-level = 3
